<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".textsetting.view.QuickTextActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messagesIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/bottom_chat"
        tools:listitem="@layout/message_cell"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <com.google.android.material.appbar.AppBarLayout
        app:liftOnScroll="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            app:contentScrim="?attr/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/chatToolbar"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:navigationIconTint="?attr/colorOnPrimary">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgChatAvatar"
                        android:layout_width="@dimen/chat_avatar"
                        android:layout_height="@dimen/chat_avatar"
                        app:srcCompat="@drawable/avatar_image_placeholder"
                        android:layout_marginTop="@dimen/small_padding"
                        android:layout_marginEnd="@dimen/small_margin"
                        android:layout_marginBottom="@dimen/small_padding"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:id="@+id/personProfession"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="?attr/colorOnPrimary"
                        tools:text="@string/profession"
                        android:textSize="@dimen/text_sz"
                        app:layout_constraintTop_toBottomOf="@+id/personTalkTo"
                        app:layout_constraintStart_toStartOf="@+id/personTalkTo"
                        app:layout_constraintBottom_toBottomOf="@+id/imgChatAvatar" />

                    <TextView
                        android:id="@+id/personTalkTo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        tools:text="@string/name_place"
                        android:textColor="?attr/colorOnPrimary"
                        app:layout_constraintTop_toTopOf="@+id/imgChatAvatar"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBarChat"
        android:layout_width="match_parent"
        android:layout_height="@dimen/paddin"
        android:layout_gravity="bottom" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/small_padding"
            android:layout_marginEnd="@dimen/small_margin"
            android:background="@drawable/textview_background">

            <EditText
                android:id="@+id/textMessage"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginVertical="@dimen/small_margin"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/small_margin"
                android:paddingVertical="@dimen/small_padding"
                android:textColor="@color/text"
                android:hint="@string/search"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sendButton" />

            <ImageButton
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_baseline_send_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="@dimen/small_margin" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.bottomappbar.BottomAppBar>
</androidx.coordinatorlayout.widget.CoordinatorLayout>